<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, RF12StatsActivity!</string>
    <string name="app_name">RF12 Stats</string>
    <string name="question_0_label">Where were you?</string>
    <string name="question_1_label">How much fun did you have?</string>
    <string name="question_2_label">How many units of alcohol did you drink?</string>
    <string name="welcome">How was yesterday?</string>

    <string-array name="areas">
        <item>Select an area</item>
        <item>Area C</item>
        <item>Area E</item>
        <item>Area G</item>
        <item>Area H</item>
        <item>Area J</item>
        <item>Area K</item>
        <item>Area L</item>
        <item>Area M</item>
        <item>Area N</item>
        <item>Area P</item>
        <item>Other</item>
    </string-array>

    <string name="submit">Submit</string>

    <string name="pease_select_something">Please fill out the questionnaire before submitting.</string>

    <string name="i_got_friends">I got friends</string>
    <string name="i_got_friends_message">Pass the phone to a friend</string>

</resources>