<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/welcome_label"
            style="@style/textAppearanceXLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="#80FFFFFF" />

        <TextView
            android:id="@+id/question_0_label"
            style="@style/questionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_0_label" />

        <Spinner
            android:id="@+id/question_0_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/question_0_label" />

        <TextView
            android:id="@+id/question_1_label"
            style="@style/questionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1_label" />

        <RatingBar
            android:id="@+id/question_1_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/question_2_label"
            style="@style/questionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2_label" />

        <TextView
            android:id="@+id/question_2_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <SeekBar
            android:id="@+id/question_2_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="31" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:onClick="submit"
            android:text="@string/submit"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>